--- a/hodo/hodo.css
+++ b/hodo/hodo.css
@@ -1,8 +1,6 @@
 #windy{
         width:100%;
         height: 100%;
-        min-width: 600px;
-        min-height: 600px;
 }
 
 #hodoOuterDiv {
@@ -13,6 +11,7 @@
     position: absolute;
     left: 0%;
     top: 50%;
+    z-index: 999;
     /*width: 45%;*/
     /*height: 80%;*/
     /*resize: both;
